<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="90dp"
        android:text="@string/heading"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="40sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical">

        <LinearLayout
            style="@style/linear"
            android:layout_width="match_parent"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                tools:srcCompat="@drawable/profile" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:drawableLeft="@android:drawable/stat_sys_phone_call"
            android:ems="11"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:ems="8"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minEms="6"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:padding="5dp"
            android:text="@string/forget_password"
            android:textColor="#ff22"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/log_in"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:text="@string/no_acoount"
                />
            <TextView
                android:id="@+id/createAc"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000DFF"
                android:text="@string/create_account"
                />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>